# bevy_mod_schematica

./: Cargo.toml
bevy_mod_schematica_macros/: Cargo.toml
bevy_mod_schematica_macros/src/: lib.rs
examples/: simple.rs
src/: hierarchy.rs  lib.rs  schematics.rs
